# nuscenes-data-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  nuscenes-mlops-project-plan-with-pahse6.md  nuscenes-mlops-project-plan.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: active_learning.yaml  autolabel.yaml  data.yaml  engine.yaml  eval.yaml  monitoring.yaml  train.yaml
docker/: serving.Dockerfile
docs/: ACTIVE_LEARNING.md  ANALYTICS.md  AUTOLABEL_EVAL.md  DATA.md  DATASET_CHAT.md  EVALUATION.md  GPU_SERVER.md  GRAPH.md  MONITORING.md  PHASE4_PLAN.md  PROJECT.md
scripts/: gpu-run.sh
src/nuscenes_data_engine/: __init__.py  cli.py  config.py  tracking.py
src/nuscenes_data_engine/active_learning/: __init__.py  experiment.py  graph_mining.py  matching.py  mining.py  report.py  split.py  sweep.py
src/nuscenes_data_engine/data_engine/: __init__.py  embedder.py  embeddings.py  search.py  store.py
src/nuscenes_data_engine/data_engine/autolabel/: __init__.py  batch.py  evaluate.py  sampling.py  schema.py
src/nuscenes_data_engine/data_engine/chat/: __init__.py  agent.py  catalog.py  transports.py
src/nuscenes_data_engine/data_engine/graph/: __init__.py  builder.py  connection.py  guard.py  knn.py  model.py  queries.py  schema.py
src/nuscenes_data_engine/evaluation/: __init__.py  evaluate.py  metrics.py  registry.py  slices.py
src/nuscenes_data_engine/ingestion/: __init__.py  categories.py  ingest.py  parquet.py  parse.py  projection.py
src/nuscenes_data_engine/monitoring/: __init__.py  drift.py  features.py
src/nuscenes_data_engine/serving/: __init__.py  app.py  benchmark.py  model.py  schemas.py
src/nuscenes_data_engine/training/: __init__.py  dataset.py  pipeline.py  run.py  runtime.py  train.py
src/nuscenes_data_engine/validation/: __init__.py  expectations.py  manifest.py
tests/: conftest.py  test_active_learning.py  test_autolabel.py  test_chat.py  test_data_engine.py  test_evaluation.py  test_graph.py  test_ingestion.py  test_manifest.py  test_monitoring.py  test_serving.py  test_smoke.py  test_smoke_train.py  test_tracking.py  test_training.py  test_validation.py
