[project]
name = "nuscenes-data-engine"
version = "0.1.0"
description = "End-to-end MLOps pipeline for autonomous-vehicle perception on the nuScenes dataset."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sahil Patkar" }]
license = { text = "MIT" }

# Base install stays laptop-friendly: metadata processing + CLI only.
# Heavy ML / serving / data-infra deps live in optional extras below.
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "pandas>=2.0",
    # <2 pin: the nuScenes devkit pulls an old matplotlib (3.5.x) that uses `np.Inf`,
    # removed in NumPy 2.0. The AV/CV stack here assumes NumPy 1.x.
    "numpy>=1.26,<2",
    "opencv-python>=4.9",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Phase 1 — ingestion/validation/versioning
data = [
    "nuscenes-devkit>=1.1.11",
    "great-expectations>=0.18",
    "dvc[s3]>=3.0",
    "evidently>=0.4",
]
# Phase 2–3 — training + experiment tracking
train = [
    "torch>=2.2",
    "ultralytics>=8.2",
    "mlflow>=2.12",
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "wandb>=0.17",
]
# Phase 4 — serving + demo UI
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.36",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "types-pyyaml",
]

[project.scripts]
nuscenes-data-engine = "nuscenes_data_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuscenes_data_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in defaults are required by typer/click
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/nuscenes_data_engine"]
mypy_path = "src"

# FastAPI route decorators resolve to Any until the `serve` extra is installed,
# which trips strict `disallow_untyped_decorators` on the serving stub.
[[tool.mypy.overrides]]
module = ["nuscenes_data_engine.serving.app"]
disallow_untyped_decorators = false

# These ship py.typed but don't cleanly export the symbols we use; skip following into
# them so they resolve to Any rather than erroring on attr-defined.
[[tool.mypy.overrides]]
module = ["great_expectations.*", "ultralytics.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "nuscenes.*",
    "cv2.*",
    "pandas.*",
    "pyarrow.*",
    "dagster.*",
    "evidently.*",
    "mlflow.*",
    "fastapi.*",
    "uvicorn.*",
    "streamlit.*",
    "pyquaternion.*",
    "shapely.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # Third-party deprecation noise from the nuScenes devkit's matplotlib/pyparsing deps.
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore:.*resetCache.*:Warning",
    "ignore:.*enablePackrat.*:Warning",
]
